# aspa

./: .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml
app/: cli.py
app/commands/: __init__.py  time.py
app/models/: TODO_pomodoro.md  pomodoro.py
app/utils/: display.py
docs/: 01-Yleiskatsaus.md  02-CLI.md  03-01-Pomodoro_sekvenssikaavio.md  03-Pomodoro.md  04-Arkkitehtuuri.md  TODO.md
tests/: test_pomodoro_timer.py  test_time.py
